update full authentication and authorization